--- a/me175.htm
+++ b/me175.htm
@@ -258,25 +258,36 @@
     <figure class="kv-fonepad"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/fonepad.png" /></figure>
 		<hgroup>
         <h1>Beauty</h1>
-		<h2>Just Got Better</h2>
+		<h2>The Best in Mobile Technology Just Got Better</h2>
 		<p>Meet the new ASUS Fonepad 7 Dual SIM, the world's most innovative combination of mobile phone and tablet. Experience all the features you'd expect from a dual-SIM mobile phone in a 7-inch tablet. It is available in stylish grey and pearl white.</p>
 		</hgroup>
 	</aside>
 </article>
 <!--article1 end-->
 
+<article id="Dual" class="content" title="Dual SIM">
+	<aside class="center">
+        <figure class="phone"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/dual_fonepad.png" /></figure>
+		<hgroup>
+        <!--<h1>Gallery</h1>-->
+		<h2>Dual SIM, Dual Stand by</h2>
+		<p>The Fonepad 7 Dual SIM satisfies every mobile phone and tablet need and helps you manage your personal and professional life in one device.</p>
+		</hgroup>
+	</aside>
+</article>
+<!--article2 end-->
 
 <article id="phoneCall" class="content" title="3G Phone">
 	<aside class="center">
  <figure><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/3gphone_fonepad.png" /></figure>
 		<hgroup>
 		<h2>The Innovative New Mobile Adventure</h2>
-		<p>Start your adventure with the perfect mobile experience. The Fonepad 7 3G service satisfies every mobile phone and tablet need, right in the palm of your hand. Whether its social media, or your social circle, you’ll always be in touch. </p>
-        <small style="font-size:9px;line-height:18px;opacity:1;margin-top:30px;display:block;">* ASUS Fonepad 7 uses the latest Micro SIM standard. Please acquire the standardized Micro SIM card from your mobile service provider. If you cut the SIM card yourself, the tablet may not be able to detect the SIM card due to improper contact points between the SIM card and the tablet.</small>
+		<p>Start your adventure with the perfect mobile experience. The Fonepad 7 Dual SIM 3G service satisfies every mobile phone and tablet need, right in the palm of your hand. Whether its social media, or your social circle, you’ll always be in touch. </p>
+        <small style="font-size:9px;line-height:18px;opacity:1;margin-top:30px;display:block;">* ASUS Fonepad 7 Dual SIM uses the latest Micro SIM standard. Please acquire the standardized Micro SIM card from your mobile service provider. If you cut the SIM card yourself, the tablet may not be able to detect the SIM card due to improper contact points between the SIM card and the tablet.</small>
 		</hgroup>
 	</aside>
 </article>
-<!--article2 end-->
+<!--article3 end-->
 
 <article id="people" class="content" title="People">
 	<aside class="center">
@@ -287,29 +298,29 @@
 		</hgroup>
 	</aside>
 </article>
-<!--article3 end-->
+<!--article4 end-->
 
-<article id="design" class="content" title="Design">
+<!--<article id="design" class="content" title="Design">
 	<aside class="center">
     <figure><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/design_fonepad.png" /></figure>
 		<hgroup>
 		<h2> Style Meets Substance</h2>
-		<p>The sleek lines of the ASUS Fonepad 7 will draw looks from those around you. Available in stylish Sapphire Black or Diamond White, your device will be the envy of your friends. </p>
+		<p>The sleek lines of the ASUS Fonepad 7 Dual SIM will draw looks from those around you. Available in stylish Sapphire Black or Diamond White, your device will be the envy of your friends. </p>
 		</hgroup>
 	</aside>
-</article>
-<!--article4 end-->
+</article>-->
+<!--article5 end-->
 
 <article id="display" class="content" title="Display">
 	<aside class="center">
     <figure><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/display_fonepad.png" /></figure>
 		<hgroup>
 		<h2>Crystal-Clear Entertainment</h2>
-		<p>ASUS Fonepad 7 features a 1280x800 HD IPS display with an incredible 178-degree viewing angle so you can share what’s onscreen with those around you.</p>
+		<p>ASUS Fonepad 7 Dual SIM features a 1280x800 HD IPS display with an incredible 178-degree viewing angle so you can share what’s onscreen with those around you.</p>
 		</hgroup>
 	</aside>
 </article>
-<!--article5 end-->
+<!--article6 end-->
 
 <article id="splendid" class="content" title="ASUS Splendid">
 	<aside class="center">
@@ -321,7 +332,7 @@
 		</hgroup>
 	</aside>
 </article>
-<!--article6 end-->
+<!--article7 end-->
 
 <article id="camera" class="content" title="Camera">
 	<aside class="center">
@@ -332,11 +343,11 @@
         <figure class="pic4"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/camera_pic4.png" /></figure>
 		<hgroup>
 		<h2>Professional Photography For Everyone</h2>
-		<p>Shoot professional grade photos and videos with the ASUS Fonepad 7’s front and rear-facing cameras. With its incredible 100-shot burst mode, you’ll never miss a single moment.</p>
+		<p>Shoot professional grade photos and videos with the ASUS Fonepad 7 Dual SIM’s front and rear-facing cameras. With its incredible 100-shot burst mode, you’ll never miss a single moment.</p>
 		</hgroup>
 	</aside>
 </article>
-<!--article7 end-->
+<!--article8 end-->
 
 <article id="asusGallery" class="content" title="ASUS Gallery">
 	<aside class="center">
@@ -347,18 +358,6 @@
         <h1>Gallery</h1>
 		<h2>Create and Share the Moments of Your Life</h2>
 		<p>Edit and organize all of your photos with the fluid Studio application. Crop and label photos and instantly share them with friends and family. </p>
-		</hgroup>
-	</aside>
-</article>
-<!--article8 end-->
-
-<article id="Dual" class="content" title="Dual SIM">
-	<aside class="center">
-        <figure class="phone"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/beauty/dual_fonepad.png" /></figure>
-		<hgroup>
-        <!--<h1>Gallery</h1>-->
-		<h2>Dual SIM, Dual Stand by</h2>
-		<p>The Fonepad 7 Dual SIM satisfies every mobile phone and tablet need and helps you manage your personal and professional life in one device.</p>
 		</hgroup>
 	</aside>
 </article>
@@ -410,7 +409,7 @@
     <figure class="speakerR"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/sound/speaker_r.png" /></figure>
 		<hgroup>
 		<h2>Be Immersed in Total Sound</h2>
-		<p>Our engineers obsessed over bringing an innovative audio package to the ASUS Fonepad 7. Dual front-facing speakers immerse you in crystal-clear audio.</p>
+		<p>Our engineers obsessed over bringing an innovative audio package to the ASUS Fonepad 7 Dual SIM. Dual front-facing speakers immerse you in crystal-clear audio.</p>
 		</hgroup>
 	</aside>
 </article>
@@ -492,7 +491,7 @@
 	<aside class="center">
 		<hgroup>
 		<h2>Calling for Your Touch</h2>
-		<p>With its gently curved lines fitting in the palm of your hand, nothing feels quite like the ergonomically-designed ASUS Fonepad 7.</p>
+		<p>With its gently curved lines fitting in the palm of your hand, nothing feels quite like the ergonomically-designed ASUS Fonepad 7 Dual SIM.</p>
 		</hgroup>
 	</aside>
 </article>
@@ -564,7 +563,7 @@
     <figure class="phoneVideo"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/cloud/battery_video.png" /></figure>
 		<hgroup>
 		<h2>All Day Battery Performance</h2>
-		<p>With an astounding 26 hours of 3G talk time and 10 hours of video playback, ASUS Fonepad 7 has enough juice to keep you going through the day.</p>
+		<p>With an astounding 26 hours of 3G talk time and 10 hours of video playback, ASUS Fonepad 7 Dual SIM has enough juice to keep you going through the day.</p>
 		</hgroup>
 	</aside>
 </article>
@@ -576,7 +575,7 @@
     <figure class="sdcard"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/cloud/microsd_card.png" /></figure>
 		<hgroup>
 		<h2>Additional Storage</h2>
-		<p>Fonepad 7 features a micro SD for up to an additional 64GB of storage.</p>
+		<p>Fonepad 7 Dual SIM features a micro SD for up to an additional 64GB of storage.</p>
 		</hgroup>
 	</aside>
 </article>
@@ -599,7 +598,7 @@
     <figure class="wave"><img src="websites/global/products/8exggl9cnpYAoWCk/img/common/cloud/miracast_wave.png" /></figure>
 
 		<hgroup>
-		<h2>View Your Fonepad 7’s Content on a Larger Screen</h2>
+		<h2>View Your Fonepad 7 Dual SIM’s Content on a Larger Screen</h2>
 		<p>The innovative new Miracast lets you share your content wirelessly. Watch or view your videos or pictures by syncing up with another friend’s mobile device or go big with a 4K Ultra HDTV. </p>
 		</hgroup>
 	</aside>
